[gd_scene load_steps=102 format=2]

[ext_resource path="res://assets/Characters/lifebarRed.png" type="Texture" id=1]
[ext_resource path="res://assets/Characters/idle.png" type="Texture" id=2]
[ext_resource path="res://assets/Characters/lifebarGreen.png" type="Texture" id=3]
[ext_resource path="res://Devourer.gd" type="Script" id=4]
[ext_resource path="res://assets/Characters/bite-attack.png" type="Texture" id=5]
[ext_resource path="res://assets/Characters/death.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 232, 166 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 232, 0, 232, 166 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 464, 0, 232, 166 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 696, 0, 232, 166 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 928, 0, 232, 166 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 166, 232, 166 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 232, 166, 232, 166 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 464, 166, 232, 166 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 696, 166, 232, 166 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 928, 166, 232, 166 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 332, 232, 166 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 232, 332, 232, 166 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 464, 332, 232, 166 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 696, 332, 232, 166 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 928, 332, 232, 166 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 498, 232, 166 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 232, 498, 232, 166 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 464, 498, 232, 166 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 696, 498, 232, 166 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 209, 208 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 209, 0, 209, 208 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 418, 0, 209, 208 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 627, 0, 209, 208 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 836, 0, 209, 208 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1045, 0, 209, 208 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 208, 209, 208 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 209, 208, 209, 208 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 418, 208, 209, 208 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 627, 208, 209, 208 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 836, 208, 209, 208 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1045, 208, 209, 208 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 416, 209, 208 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 209, 416, 209, 208 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 418, 416, 209, 208 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 627, 416, 209, 208 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 836, 416, 209, 208 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1045, 416, 209, 208 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 624, 209, 208 )

[sub_resource type="AtlasTexture" id=95]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 209, 624, 209, 208 )

[sub_resource type="AtlasTexture" id=96]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 418, 624, 209, 208 )

[sub_resource type="AtlasTexture" id=97]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 627, 624, 209, 208 )

[sub_resource type="AtlasTexture" id=98]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 836, 624, 209, 208 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1045, 624, 209, 208 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 175, 119 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 175, 0, 175, 119 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 350, 0, 175, 119 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 525, 0, 175, 119 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 700, 0, 175, 119 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 875, 0, 175, 119 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1050, 0, 175, 119 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1225, 0, 175, 119 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 119, 175, 119 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 175, 119, 175, 119 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 350, 119, 175, 119 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 525, 119, 175, 119 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 700, 119, 175, 119 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 875, 119, 175, 119 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1050, 119, 175, 119 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1225, 119, 175, 119 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 238, 175, 119 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 175, 238, 175, 119 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 350, 238, 175, 119 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 525, 238, 175, 119 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 700, 238, 175, 119 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 875, 238, 175, 119 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1050, 238, 175, 119 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1225, 238, 175, 119 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 357, 175, 119 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 175, 357, 175, 119 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 350, 357, 175, 119 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 525, 357, 175, 119 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 700, 357, 175, 119 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 875, 357, 175, 119 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1050, 357, 175, 119 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1225, 357, 175, 119 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 476, 175, 119 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 175, 476, 175, 119 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 350, 476, 175, 119 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 525, 476, 175, 119 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 700, 476, 175, 119 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 875, 476, 175, 119 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1050, 476, 175, 119 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1225, 476, 175, 119 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 595, 175, 119 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 175, 595, 175, 119 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 350, 595, 175, 119 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 525, 595, 175, 119 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 700, 595, 175, 119 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 875, 595, 175, 119 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1050, 595, 175, 119 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1225, 595, 175, 119 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ) ],
"loop": true,
"name": "attack",
"speed": 20.0
}, {
"frames": [ SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ) ],
"loop": false,
"name": "death",
"speed": 12.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 115.849

[sub_resource type="CircleShape2D" id=7]

[sub_resource type="CircleShape2D" id=8]
radius = 14.0

[node name="Devourer" type="KinematicBody2D" groups=["devourer", "monster"]]
position = Vector2( 458, 291 )
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
self_modulate = Color( 0.705882, 0.298039, 0.298039, 1 )
scale = Vector2( 1.3, 1.3 )
z_index = 1
frames = SubResource( 5 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 6 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( -105, -95 )
scale = Vector2( 10.4924, 10.08 )
shape = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = -75.0
margin_top = -160.0
margin_right = -25.0
margin_bottom = -110.0
rect_scale = Vector2( 3, 3 )
max_value = 3.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 0.666667 )
scale = Vector2( 10.4, 9.99998 )
shape = SubResource( 8 )

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_Area2D_body_shape_exited"]
